<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="HMI" Id="{144e621b-ffdb-4153-9ea5-427fe228f305}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	clearAlarmAll : BOOL;
	bExportCSV : BOOL;
	clearlogged : BOOL;
	AlarmID: UINT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>