<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="MAIN" Id="{e24e4ddb-35a4-44b0-8037-fc097a3e01d2}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	al : Alarm;
	a2 : Alarm;
	
	raise: BOOL;
	confirm : BOOL;
	clear : BOOL;
	
	raise2: BOOL;
	confirm2 : BOOL;
	clear2 : BOOL;
	
	clearAlarms : BOOL; 
	fbEventLogger : FB_TcEventLogger;
	iEventLoggerSetting : I_TcClearLoggedEventsSettings;
	fbEventLoggerSetting : FB_TcClearLoggedEventsSettings;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[al(
	AlarmID := TC_Events.Alarm.Event,
	bRaiseAlarm := raise);

a2(
	AlarmID := TC_Events.Alarm.AlarmEvent2,
	bRaiseAlarm := raise2);
clearAlarms := HMI.clearAlarmAll;	
FB_ExportCSV(bExport := HMI.bExportCSV);
ClearLoggedEvent(HMI.clearlogged); ]]></ST>
    </Implementation>
    <Method Name="ClearLoggedEvent" Id="{2fe84791-1de5-46cc-acc5-006b30e4015a}">
      <Declaration><![CDATA[METHOD ClearLoggedEvent : BOOL
VAR_INPUT
	bClearLoggedEvent : BOOL;
END_VAR

VAR
	
	clear : BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF bClearLoggedEvent THEN
	fbEventLoggerSetting.Clear();
	//fbEventLogger.ClearAllAlarms(0, bClearLoggedEvent);	
	fbEventLogger.ConfirmAllAlarms(0);
	clearAlarms := TRUE;
	FB_ExportCSV(bExport := TRUE);	
	fbEventLogger.ClearLoggedEvents(fbEventLoggerSetting);
	bClearLoggedEvent := FALSE;
	
END_IF
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="MAIN">
      <LineId Id="2" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="34" Count="1" />
      <LineId Id="52" Count="0" />
    </LineIds>
    <LineIds Name="MAIN.ClearLoggedEvent">
      <LineId Id="6" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="19" Count="1" />
      <LineId Id="31" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="22" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>